coder/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
      proxy_set_header Upgrade $http_upgrade;
      proxy_http_version 1.1;
      proxy_set_header X-Forwarded-Host $http_host;
      proxy_set_header X-Forwarded-Proto $scheme;
      proxy_set_header X-Forwarded-For $remote_addr;
      proxy_set_header Host $host;
      proxy_set_header Connection "upgrade";
      proxy_cache_bypass $http_upgrade;
      }
  creationTimestamp: "2023-03-29T09:32:57Z"
  generation: 3
  labels:
    kustomize.toolkit.fluxcd.io/name: flux-system
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  name: coder
  namespace: coder
  resourceVersion: "1877647"
  uid: a1df49d3-44d0-4b5f-8d6e-f336826d166f
spec:
  ingressClassName: nginx
  rules:
    - host: space.sharing.io
      http:
        paths:
          - backend:
              service:
                name: coder
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: "*.sharing.io"
      http:
        paths:
          - backend:
              service:
                name: coder
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - space.sharing.io
        - "*.sharing.io"
---
